--- a/mc2-wonders-of-united-states-of-america/index.html
+++ b/mc2-wonders-of-united-states-of-america/index.html
@@ -1,1 +1,50 @@
-<!--Write solution code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <h1>Wonders of The United States of America</h1>
+        <a href="#">Destination</a>
+        <a href="#">Intrests</a>
+        <a href="#">Trips</a>
+        <hr>
+    </header>
+
+    <main>
+        <article>
+            <section>
+        <h2>Brooklyn Bridge </h2>
+        <p>The Brooklyn Bridge is a hybrid cable-stayed/suspension bridge in New York City, spanning the East River between the boroughs of Manhattan and Brooklyn. Opened on May 24, 1883, the Brooklyn Bridge was the first fixed crossing of the East River. It was also the longest suspension bridge in the world at the time of its opening, with a main span of 1,595.5 feet (486.3 m) and a deck 127 ft (38.7 m) above mean high water. The span was originally called the New York and Brooklyn Bridge or the East River Bridge but was officially renamed the Brooklyn Bridge in 1915.
+            <a href="https://en.wikipedia.org/wiki/Brooklyn_Bridge">Read more..</a></p>
+            <img src="./images/brooklyn-bridge.jpg" alt="brooklyn-bridge">
+            <p>Photo:Brooklyn Bridge</p>
+             </section>
+
+            <section>
+                <h2>Hoover Dam</h2>
+                <p>Hoover Dam is a concrete arch-gravity dam in the Black Canyon of the Colorado River, on the border between the U.S. states of Nevada and Arizona. It was constructed between 1931 and 1936 during the Great Depression and was dedicated on September 30, 1935, by President Franklin D. Roosevelt. Its construction was the result of a massive effort involving thousands of workers, and cost over one hundred lives.
+                    <a href="https://en.wikipedia.org/wiki/Hoover_Dam">Read more..</a></p>
+                <img src="./images/hoover-dam.jpg" alt="hoover-dam">
+                <p>Photo:Hoover Dam</p>
+
+            </section>
+        </article>
+        <hr>
+    </main>
+
+    <footer>
+        <ul>
+            <li><a href="#">Help</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Site Term</a></li>
+        </ul>
+        <p>&copy;Copyright All State Corp</p>
+    </footer>
+    
+</body>
+</html>
